--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "37.0.7",
+    "fuzzy-search": "^3.2.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -18,7 +19,8 @@
     "react-router-native": "5.1.2"
   },
   "devDependencies": {
-    "@babel/core": "7.9.0"
+    "@babel/core": "7.9.0",
+    "babel-preset-react-native": "^2.1.0"
   },
   "private": true
 }
