--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
     "@ui-kitten/components": "^5.0.0",
+    "@ui-kitten/eva-icons": "^5.0.0",
     "expo": "37.0.7",
     "expo-constants": "^9.0.0",
     "fuzzy-search": "^3.2.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-svg": "9.13.6",
+    "react-native-svg": "^12.1.0",
     "react-native-web": "0.11.7",
     "react-router-dom": "5.1.2",
     "react-router-native": "5.1.2"
