--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-base64": "0.0.2",
     "react-native-svg": "^12.1.0",
     "react-native-web": "0.11.7",
     "react-router-dom": "5.1.2",
@@ -25,7 +26,10 @@
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
-    "babel-preset-react-native": "^2.1.0"
+    "babel-preset-react-native": "^2.1.0",
+    "@types/react": "~16.9.23",
+    "@types/react-native": "~0.61.23",
+    "typescript": "~3.8.3"
   },
   "private": true
 }
